# 2026-AUV-PROJECT-FOR-EV

./: .gitignore  AGENTS.md  README.md  agent.md  data_flow.dot  流程图.md
Ancestral_code/Cruise/: New File.txt  uv_tasks.bak1.json  uv_tasks.bak2.json
Ancestral_code/Cruise/datas/: auv1000times.pt  auv_2023wurc.pt  auv_door.pt  auv_robocub2023_1.pt  auv_without_door.pt  down.npz  front_2023WURC.npz  uv_tasks_11_night.json  uv_tasks_left.json
Ancestral_code/Cruise/install/: local_setup.sh
Ancestral_code/Cruise/scripts/run/: calibration.sh  permissions.sh  rebuild.sh
Ancestral_code/Cruise/scripts/test/: cli_test.py  depth_test.py  img_compress.py  keyboardtest.py  uart_test.py  web_cam.sh
Ancestral_code/Cruise/src/: code_collection.txt
Ancestral_code/Cruise/src/utils/: package.xml
Ancestral_code/Cruise/src/uv_ai/: setup.cfg
Ancestral_code/Cruise/src/uv_control_py/: package.xml
Ancestral_code/Cruise/src/uv_msgs/: package.xml
Ancestral_code/Cruise/src/uv_vision/: package.xml  setup.cfg  setup.py
Ancestral_code/install/: local_setup.sh  setup.sh
Cruise/datas/: +-yaw.py  front.npz  help.txt  pid_parameters.json  tasks_example.json  thrust_cureves (copy 1).json  thrust_cureves.json  uv_tasks - 副本 (2).json  uv_tasks - 副本.json  uv_tasks.json  uv_tasks_WUURC2023.json  uv_tasks_crc2024.json  uv_tasks_right.json
Cruise/install/: setup.sh
Cruise/scripts/run/: image_transport.sh  srs_start.sh  timeupdate.sh
Cruise/scripts/test/: cam_test.py  data_test.py  path_test.py  uart.py  web_cam.py  web_server.py  webimg_read.py
Cruise/src/models/: package.xml  setup.cfg  setup.py
Cruise/src/utils/: setup.py
Cruise/src/utils/utils/: loss.py
Cruise/src/uv_ai/: package.xml  setup.py
Cruise/src/uv_ai/uv_ai/: uv_automation_v2.py  uv_automaton - 副本.py  uv_detect_demo_enumerated.txt  uv_detect_lightglue_test1.py
Cruise/src/uv_control_py/: setup.cfg  setup.py
Cruise/src/uv_control_py/uv_control_py/: Curve.py  Pid.py
Cruise/src/uv_hm/: package.xml  setup.cfg  setup.py
Cruise/src/uv_hm/uv_hm/: uv_hmu.py
Cruise/src/uv_launch_pkg/: package.xml  setup.cfg  setup.py
Cruise/src/uv_launch_pkg/launch/: launch.py
Cruise/src/uv_msgs/: CMakeLists.txt
Cruise/src/uv_msgs/msg/: CabinState.msg  PidParams.msg  Yolov8.msg
Cruise/src/uv_msgs/srv/: DetectRequest.srv
Cruise/src/uv_vision/uv_vision/: uv_capture - 不保存图像版.py  uv_capture.py  uv_capture_commented.py
MCU_PROJECT/DeviceManager/: .clang-format  .clangd  .mxproject  DeviceManager_code_dump.txt  Makefile  StateWatcher.ioc
MCU_PROJECT/DeviceManager/.eide/: eide.json
MCU_PROJECT/DeviceManager/Core/Inc/: main.h  shtc3.h  stm32f4xx_it.h  (+1 more)
MCU_PROJECT/MotionControl-CSnew/: .clang-format  .mxproject  Makefile  MotionControl_code_dump.txt  MotionControler.ioc
MCU_PROJECT/MotionControl-CSnew/.eide/: eide.json
MCU_PROJECT/MotionControl-CSnew/AutoControl/: autocontrol.h  coordinate_system.c  coordinate_system.h  filter.c  filter.h  pid_models.c  pid_models.h
SOMETHING NEW/: PROMPT.md
SOMETHING NEW/GUI_PROJECT/: AGENTS.md  README.md
SOMETHING NEW/GUI_PROJECT/ros2_mvp_ws/: requirements.txt
SOMETHING NEW/GUI_PROJECT/ros2_mvp_ws/src/mvp_gui/: package.xml  setup.cfg  setup.py
SOMETHING NEW/GUI_PROJECT/ros2_mvp_ws/src/mvp_gui/mvp_gui/: __init__.py  app.py  gui.py  ros_client.py  ssh_client.py
SOMETHING NEW/GUI_PROJECT/ros2_mvp_ws/src/mvp_talker/: package.xml  setup.cfg  setup.py
SOMETHING NEW/GUI_PROJECT/ros2_mvp_ws/src/mvp_talker/mvp_talker/: parameter_talker.py
SOMETHING NEW/SuperGluePretrainedNetwork-master/: requirements.txt  stereo_yolo_superglue_measure.py
SOMETHING NEW/SuperGluePretrainedNetwork-master/dump_match_pairs/: scene0711_00_frame-001680_scene0711_00_frame-001995_matches.npz  scene0713_00_frame-001320_scene0713_00_frame-002025_matches.npz  scene0721_00_frame-000375_scene0721_00_frame-002745_matches.npz  scene0722_00_frame-000045_scene0722_00_frame-000735_matches.npz  scene0726_00_frame-000135_scene0726_00_frame-000210_matches.npz  scene0737_00_frame-000930_scene0737_00_frame-001095_matches.npz  scene0738_00_frame-000885_scene0738_00_frame-001065_matches.npz  scene0743_00_frame-000000_scene0743_00_frame-001275_matches.npz  scene0744_00_frame-000585_scene0744_00_frame-002310_matches.npz  scene0747_00_frame-000000_scene0747_00_frame-001530_matches.npz  scene0752_00_frame-000075_scene0752_00_frame-001440_matches.npz  scene0755_00_frame-000120_scene0755_00_frame-002055_matches.npz  scene0758_00_frame-000165_scene0758_00_frame-000510_matches.npz  scene0768_00_frame-001095_scene0768_00_frame-003435_matches.npz  scene0806_00_frame-000225_scene0806_00_frame-001095_matches.npz
SOMETHING NEW/UDP_GUI_PROJECT/: README.md
SOMETHING NEW/UDP_GUI_PROJECT/pc_client/: dashboard.py
SOMETHING NEW/UDP_GUI_PROJECT/ros2_udp_ws/src/cruise_bridge/: package.xml
SOMETHING NEW/UDP_GUI_PROJECT/ros2_udp_ws/src/cruise_bridge/cruise_bridge/: udp_server.py
install/: setup.bash  setup.ps1  setup.zsh
(+288 files in other folders)
