<?xml version="1.0"?>
<package format="3">
  <name>mvp_talker</name>
  <version>0.1.0</version>
  <description>Parameter-driven talker node for the ROS2 Cross-Platform Control GUI MVP.</description>
  <maintainer email="dev@example.com">AUV Dev Team</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <test_depend>ament_pytest</test_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
