<?xml version="1.0"?>
<package format="3">
  <name>cruise_bridge</name>
  <version>0.1.0</version>
  <description>UDP bridge node streaming ROS2 telemetry/video to a PC dashboard and accepting parameter/control commands.</description>
  <maintainer email="dev@example.com">AUV Dev Team</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <test_depend>ament_pytest</test_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
